<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">GymApp</string>
    <string name="measurements_title">Measurements</string>
    <string name="european_units_text">European Units\n<small>(Kg, Kilometres, cm)</small></string>
    <string name="imperial_units_text">Imperial Units\n<small>(lbs, Miles, in)</small></string>
    <string name="unit_system_title">Choose Unit System</string>
    <string name="home">Home</string>
    <string name="push_past_limits">Push\npast\nlimits</string>
    <string name="my_routine">My Routine</string>
    <string name="add_routine">Add Routine</string>
    <string name="view_all_routines">View all my routines</string>
    <string name="explore">Explore</string>
    <string name="routine">Routine</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="choose_unit_title">Choose Unit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_history_title">Workout History</string>
    <string name="date_placeholder">2025-04-20</string>


</resources>
